--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,14 @@
 	box-sizing: border-box;
 }
 html,body{
+	width: 100%;
 	height: 100%;
+	font-family: 'Lato', sans-serif
 }
 header{
-	padding: 10px 2%;
+	padding: 10px 2% 40px 2%;
 	width: 100%;
-	background-color: gray;
+	background-color: rgb(180, 180, 180);
 }
 .clear{
 	clear: both;
@@ -34,6 +36,80 @@ section{
 	background-image: url(../imagens/logo2.png);
 	background-repeat: no-repeat;
 	background-size: contain;
+}
+.bg{
+	margin: 0 auto;
+	background-image: url(../imagens/bg-form.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	max-width: 1280px;
+	height: 500px;
+}
+aside{
+	box-shadow: 1px 1px 2px 1px black;
+	margin-right: 15px;
+	float: right;
+	width: 400px;
+	height: 110%;
+	position: relative;
+	top: -5%;
+	background-color: rgba(255, 255, 255, 0.7);
+}
+aside h2{
+	font-weight: normal;
+	padding: 20px 15px;
+	background-color: rgb(210, 210, 210);
+	font-size: 18px;
+}
+form{
+	margin-top: 20px;
+	padding: 30px;
+}
+input{
+	width: 100%;
+	border: 1px solid black;
+	padding-left: 10px;
+	margin-bottom: 50px;
+	line-height: 45px;
+}
+input[type=submit]{
+	background-color: #003854;
+	text-transform: uppercase;
+	color: white;
+	border: 0;
+	margin-top: 10px;
+	margin-bottom: 0px;
+	cursor: pointer;
+	padding: 0px;
+	font-size: 20px;
+}
+input[type=submit]:hover{
+	background-color: #004568 ;
+
+}
+main{
+	margin: 0 auto;
+	padding: 30px 0;
+	text-align: center;
+	background-color: #ba8f71;
+	display: inline-block;
+	padding: 0;
+	width: 100%;
+	max-width: 1280px;
+}
+section.chamada{
+	padding: 20px;
+}
+section.chamada h2{
+	text-align: center;
+	width: 96%;
+	max-width: 600px;
+	display: inline-block;
+	color: white;
+	font-size: 30px;
+	font-weight: normal;
 }
 @media screen and (max-width: 510px){
 	.logo1,.logo2{
